[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvic-gitlab-connector"
version = "1.0.0"
description = "Conector Ruvic para GitLab: gestión de issues, comentarios en Merge Requests y consulta de pipelines, vía Personal Access Token"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3.0",
]

[tool.setuptools.packages.find]
include = ["ruvic_gitlab_connector*"]
